yoshimi 1.5.0 M

2016-3-3 Will
* Changed confusing naming referring to voice list vibratto.
  Also improved comment.
* Improved float/int and float/bool casts in interchange.
* Gui Addsynth base parameters now go through ring buffers.
* Reinstated Addsynth base random pan button behaviour.

2016-3-2 Will
* Main part limits done (not controllers)
* Master limits done.
* Bugfix: Gui changing available parts requered two clicks.
* Fixed new regression. Cli was never just reading values.
* Gui LFOs now go entirely through ring buffers.

2016-3-1 Will
* Started identifying default and limit values for part.
  Cli direct access uses "lim" instead of value and type.
* Small adjustment to part label display.

2016-2-26 Will
* Fixed instrument background colours.

2017-2-24 Will
* Added ARM options to CMakeLists.txt
* Restored commented out AdNote cubic interpolation
  for future examination (currently would segfault).
* Updated copyright notices and dates in various files.

2017-2-23 Will
*Merged in Rob's live LFO controls.

2017-2-21 Will
* Merged  in Jesper's latest tooltip additions.
* Minor change to freemode Envelope text to remove overlaps.

2017-2-20 Will
* Remaining Cli inputs converted.
  I hope!

2017-2-19 Will
* Bugfix: Midi-learn wasn't reloading the correct ranges.
* Found more Cli numbers to adjust :(
* Started changing Cli *input* numbers to match Gui ones.
* Got as far as 'commandPart'.

2017-2-18 Will
* Vectors now soft-load :)

2017-2-17 Will
* Cli effect presets now numbered from 1.
* Improved Cli listing of effects/presets.
* Bugfix: Solo wasn't seeing 'Loop' when reloading.
* Bugfix: Mute not cleared if patchset load failed.
* Cli can load patchsets and vectors from list numbers.
* Cli loading vectors updates the Gui.

2017-2-16 Will
* Improved readline behavour.
  Still needs more work - sometimes multiple prompt lines!
* Converted reported Cli numbers to match Gui ones.
  May have missed some :(
  Entries still zero based.

2017-2-13 Will