@@ -21,7 +21,7 @@
     Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
     This file is derivative of ZynAddSubFX original code
-    Modified February 2017
+    Modified March 2017
 */
 #include <cmath>
 
@@ -129,6 +129,8 @@ PADnote::PADnote(PADnoteParameters *parameters, Controller *ctl_, float freq,
         randpanL = cosf(t * HALFPI);
         randpanR = cosf((1.0f - t) * HALFPI);
     }
+    else
+        randpanL = randpanR = 0.7f;
 
     NoteGlobalPar.FilterCenterPitch =
         pars->GlobalFilter->getfreq() + // center freq
@@ -278,6 +280,8 @@ void PADnote::PADlegatonote(float freq, float velocity,
         randpanL = cosf(t * HALFPI);
         randpanR = cosf((1.0f - t) * HALFPI);
     }
+    else
+        randpanL = randpanR = 0.7f;
 
     NoteGlobalPar.FilterCenterPitch =
         pars->GlobalFilter->getfreq() // center freq
